在swagger上测试上传文件和图片的接口
